<resources>
    <string name="app_name">MusicPlayer</string>
    <string name="favori">Favori</string>
    <string name="PlayList">PlayList Name</string>
    <string name="shuffle">Shuffle</string>
    <string name="shufle">SHUFLE</string>
    <string name="total_songs_432">Total Songs :432</string>
    <string name="world_of_music">World of music</string>
    <string name="song_name">Song Name</string>
    <string name="start">00:00</string>
    <string name="loading">Loading...</string>
    <string name="back_btn">back_btn</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_icon">Icon</string>
    <string name="text_nav">Welcome to \nWorld of Music</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="min_15">15 Min</string>
    <string name="min_30">30 Min</string>
    <string name="min_60">60 Min</string>
    <string name="search_view">search view</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="song_img">song img</string>
    <string name="playlist_delete">delete playlist</string>
    <string name="username">Yor Name</string>
    <string name="PlayList2">PLAYLİST</string>
    <string name="asjkdfnksjndfjksndfjks">asjkdfnksjndfjksndfjks</string>
    <string name="playlistname">playlist Name</string>
    <string name="add_song">Add\n</string>
    <string name="removeall">Remove All</string>
    <string name="search_song">Search Song</string>
    <string name="developer_name_onur">Developer Name : Onur</string>
    <string name="surname_g_nd_z">Surname :Gündüz</string>
    <string name="enjoy_endless_music_at_your_fingertips_our_mp3_music_player_app_is_the_perfect_solution_for_playing_your_favorite_songs_albums_and_playlists_anytime_anywhere_bring_the_power_of_music_to_your_fingertips_and_savor_every_moment_key_features_wide_music_format_support_seamlessly_play_popular_audio_formats_such_as_mp3_wav_aac_and_more_user_friendly_interface_easily_find_and_play_your_music_with_a_simple_and_user_friendly_interface_playlists_create_your_own_custom_playlists_or_edit_existing_ones_offline_mode_play_your_music_without_needing_an_internet_connection_ideal_for_travel_or_staying_within_data_limits">Enjoy endless music at your fingertips! Our MP3 Music Player app is the perfect solution for playing your favorite songs, albums, and playlists anytime, anywhere. Bring the power of music to your fingertips and savor every moment. Key Features: Wide Music Format Support: Seamlessly play popular audio formats such as MP3, WAV, AAC, and more. User-Friendly Interface: Easily find and play your music with a simple and user-friendly interface. Playlists: Create your own custom playlists or edit existing ones. Offline Mode: Play your music without needing an internet connection. Ideal for travel or staying within data limits.</string>


</resources>