<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PlayerActivity"
    android:orientation="vertical"
  android:gravity="center"
    android:background="@drawable/backgraoundmain">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="1">

        <ImageButton
            android:id="@+id/backBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_arrow_back_ios_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="6dp"
            android:layout_marginStart="8dp"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:text="@string/world_of_music"
            android:textSize="20sp"
            android:gravity="center"
            android:layout_weight="1"

            tools:ignore="NestedWeights" />
        <ImageButton
            android:id="@+id/favoriteBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_favorite_border_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            app:tint="#DD0000" />
    </LinearLayout>


    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/SongImgPA"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_margin="10dp"
        android:src="@drawable/iconmusic"
        app:strokeColor="#1F9CFF"
        app:strokeWidth="5dp"/>

    <TextView
        android:id="@+id/songNamepa"
        android:layout_width="match_parent"
        android:layout_height="6dp"
        android:layout_marginHorizontal="20dp"
        android:text="@string/song_name"
        android:gravity="center"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textAlignment="center"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="16dp"
        android:gravity="center"
        android:layout_weight="1">

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/backmusic"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            app:iconSize="32dp"
            android:backgroundTint="#1F9CFF"
            app:icon="@drawable/back"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/playpausebutton"
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            app:iconSize="40dp"
            android:layout_marginHorizontal="25dp"
            android:backgroundTint="#1F9CFF"
            app:icon="@drawable/baseline_pause_24"/>

        <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
            android:id="@+id/nextMusic"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            app:iconSize="26dp"
            android:backgroundTint="#1F9CFF"
            app:shapeAppearanceOverlay="@style/Widget.AppCompat.Button"
            app:icon="@drawable/next"
           />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:orientation="horizontal"
        android:layout_margin="20dp"
        android:layout_weight="1">

         <TextView
             android:id="@+id/seekBarStart"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/start"/>

        <androidx.appcompat.widget.AppCompatSeekBar
            android:id="@+id/seekBarPA"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/seekBarEnd"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:text="@string/loading"/>


    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_weight="1">


        <ImageButton
            android:id="@+id/timerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_timer_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            app:tint="#1F9CFF"
            android:layout_weight="1"
            tools:ignore="NestedWeights" />


        <ImageButton
            android:id="@+id/equalizerBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_graphic_eq_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            app:tint="#1F9CFF"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/repeatBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_repeat_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            app:tint="#1F9CFF"
            android:layout_weight="1"/>

        <ImageButton
            android:id="@+id/shareBtnPA"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_share_24"
            android:backgroundTint="@android:color/transparent"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="8dp"
            app:tint="#1F9CFF"
            android:layout_weight="1"/>

    </LinearLayout>






</LinearLayout>